--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv": "^15.0.0",
+    "esm": "^3.2.25",
     "express": "^4.17.2",
     "i": "^0.3.7",
     "init": "^0.1.2",
@@ -14,6 +15,7 @@
   "repository": "https://github.com/olatocode/NBA_Nota-Bene-App.git",
   "author": "Tobi Awosola",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev": "nodemon app.js"
   }
